force-app/main/default/objects/Contact/fields/secondry_email__c.field-meta.xml
<CustomField>
    <fullName>secondry_email__c</fullName>
    <label>secondry email</label>
    <type>Email</type>
</CustomField>