force-app/main/default/objects/Contact/fields/serial_number__c.field-meta.xml
<CustomField>
    <fullName>serial_number__c</fullName>
    <label>serial number</label>
    <type>Date</type>
</CustomField>