force-app/main/default/objects/Contact/fields/total_amount__c.field-meta.xml
<CustomField>
    <fullName>total_amount__c</fullName>
    <label>total amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>